--- a/src/css/multimediaizer.css
+++ b/src/css/multimediaizer.css
@@ -1,3 +1,16 @@
-.popup {
-  background:purple;
+.multimediaizer {
+  position:absolute;
+  top:4px;
+  left:4px;
+  right:4px;
+  bottom:4px;
+}
+
+.multimediaizer > iframe {
+  position: absolute;
+  left:calc(-12.5% + 1px);
+  top:calc(-12.5% + 1px);
+  width:125%;
+  height:125%;
+  transform:scale(0.8);
 }
