--- a/src/widgets/css/videoplayer-chapter-controls.css
+++ b/src/widgets/css/videoplayer-chapter-controls.css
@@ -14,7 +14,11 @@
     }
 
     &[data-is-active="true"] {
-      background:var(--textcolor-inverted);
+      cursor:default;
+    }
+
+    &[data-is-active="true"] .position {
+      color:inherit;
     }
   }
 
