reverted cssnano, was breaking the build on a cra demo

--- a/src/css/_variables-theme.css
+++ b/src/css/_variables-theme.css
@@ -29,7 +29,7 @@
 
 
   /* VIEWS ------------------- */
-  --page-bgColor: #a9a;
+  --page-bgColor: #fff;
   --page-fontSizeBaseInPixels: 16px;
   --page-fontFamily: Helvetica, Arial, sans-serif;
 }
